--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <img src="img/LOGO_CPV.png" alt="Logo COBATY POITIERS VIENNE" class="LOGO_CPV">
         </header>
         <header-nav class="header-nav">
+            <a href="img/COBATY_annuaire_03_2020.pdf" target="blank">Annuaire</a> 
             <a href="Actualités.html">Actualités</a>
         </header-nav>
         <fieldset>
