--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>COBATY POITIERS-VIENNE></title>
         <meta name="description" content="Association regroupant toutes celles et tous ceux dont l'activité professionnelle est concernée par l'acte de bâtir, l'urbanisme ou l'environnement">
         <meta name="keywords" content="cobaty, bâtiment, urbanisme, environnement">
-        <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body class="body">
         <header class="header">  
