--- a/Actualités.html
+++ b/Actualités.html
@@ -17,11 +17,14 @@
             <a href="index.html">Retour à l'accueil</a>
         </header-nav>
         <footer class="footer">
+            <a href="img/2021_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2021</a>
             <a href="img/2021_01_14_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 14 janvier 2021</a>
             <a href="https://youtu.be/zEqPIJ7-daA" target="blank">Vœux du Bureau pour 2021</a>
-            <a href="https://www.dropbox.com/s/b4daouemsjpa5y1/MAKING-OF%20VOEUX%20COBATY%202021.m4v?dl=0" target="blank">Vœux: Le making of</a>
+           
             <a href="img/2020_12_10_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 10 décembre 2020</a>
             <a href="img/2020_11_26_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 26 novembre 2020</a>
+            <a href="https://www.dropbox.com/s/jo47i3ybj9j9ot8/Am%C3%A9nagement%20de%20Tison%2014%20juin%202018.m4v?dl=0" target="blank">Visite du chantier de l'Ilot TISON</a>
+            <a href="https://www.dropbox.com/s/xih50rg5jd7s1jg/COBATY%20Center%20Parcs%20Vienne%2026-oct-2016.m4v?dl=0" target="blank">Visite du Chantier du CENTER PARCS du BOIS aux DAIMS</a>
         </footer>
     </body>
 </html>
