--- a/Actualités.html
+++ b/Actualités.html
@@ -25,6 +25,7 @@
             <a href="img/2020_11_26_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 26 novembre 2020</a>
             <a href="https://www.dropbox.com/s/jo47i3ybj9j9ot8/Am%C3%A9nagement%20de%20Tison%2014%20juin%202018.m4v?dl=0" target="blank">Visite du chantier de l'Ilot TISON</a>
             <a href="https://www.dropbox.com/s/xih50rg5jd7s1jg/COBATY%20Center%20Parcs%20Vienne%2026-oct-2016.m4v?dl=0" target="blank">Visite du Chantier du CENTER PARCS du BOIS aux DAIMS</a>
+            <a href="https://www.dropbox.com/s/gyn8ccg0gw8pm9s/Cit%C3%A9%20judiciaires%20de%20Poitiers%20-%20Visite%20n%C2%B01%20-%2014-sept%202017.m4v?dl=0" target="blank">Visite du chantier de la cité judiciaire de Poitiers 2017</a>
         </footer>
     </body>
 </html>
