--- a/Actualités.html
+++ b/Actualités.html
@@ -20,12 +20,12 @@
             <a href="img/2021_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2021</a>
             <a href="img/2021_01_14_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 14 janvier 2021</a>
             <a href="https://youtu.be/zEqPIJ7-daA" target="blank">Vœux du Bureau pour 2021</a>
-           
             <a href="img/2020_12_10_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 10 décembre 2020</a>
             <a href="img/2020_11_26_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 26 novembre 2020</a>
             <a href="https://www.dropbox.com/s/jo47i3ybj9j9ot8/Am%C3%A9nagement%20de%20Tison%2014%20juin%202018.m4v?dl=0" target="blank">Visite du chantier de l'Ilot TISON</a>
             <a href="https://www.dropbox.com/s/xih50rg5jd7s1jg/COBATY%20Center%20Parcs%20Vienne%2026-oct-2016.m4v?dl=0" target="blank">Visite du Chantier du CENTER PARCS du BOIS aux DAIMS</a>
             <a href="https://www.dropbox.com/s/gyn8ccg0gw8pm9s/Cit%C3%A9%20judiciaires%20de%20Poitiers%20-%20Visite%20n%C2%B01%20-%2014-sept%202017.m4v?dl=0" target="blank">Visite du chantier de la cité judiciaire de Poitiers 2017</a>
+            <a href="https://www.dropbox.com/s/kxk95p03ccszgpl/Cité%20judiciaire%20de%20Poitiers%20-%20Visite%20n°2%20-%2013-sept-2018.m4v?dl=0" target="blank">Deuxième visite de la cité judiciaire de Poitiers 13/09/2018</a>
         </footer>
     </body>
 </html>
