--- a/Actualités.html
+++ b/Actualités.html
@@ -17,6 +17,7 @@
             <a href="index.html">Retour à l'accueil</a>
         </header-nav>
         <footer class="footer">
+            <a href="img/2021_03_25_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 25 mars 2021</a> 
             <a href="img/2021_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2021</a>
             <a href="img/2021_01_14_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 14 janvier 2021</a>
             <a href="https://youtu.be/zEqPIJ7-daA" target="blank">Vœux du Bureau pour 2021</a>
