--- a/Actualités.html
+++ b/Actualités.html
@@ -24,6 +24,7 @@
             <a href="img/2020_12_10_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 10 décembre 2020</a><br>
             </div>
             <span>
+            <a href="https://www.dropbox.com/s/ajsb7w4rn2tg81r/Chauvigny%2013%20juin%202019.m4v?dl=0" target="blank">Visite CHAUVIGNY</a><br>
             <a href="https://www.dropbox.com/s/jbkfjgvmeynjp20/Confort%20Moderne%20-%209%20mars%202017.m4v?dl=0" target="blank">Visite du chantier du Confort Moderne</a><br>
             <a href="https://www.dropbox.com/s/pu2f0ngo5s5q5bk/Ch%C3%A2teau%20de%20Dissay%20-%2011-oct-2018.m4v?dl=0" target="blank">Visite du Château de Dissay 11 octobre 2018</a><br>
             <a href="https://www.dropbox.com/s/jo47i3ybj9j9ot8/Am%C3%A9nagement%20de%20Tison%2014%20juin%202018.m4v?dl=0" target="blank">Visite du chantier de l'Ilot TISON</a><br>
