--- a/Actualités.html
+++ b/Actualités.html
@@ -18,10 +18,10 @@
         </header-nav>
         <footer class="footer">
             <div>
+            <a href="img/2021_05_06_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 6 mai 2021</a><br>
+            <a href="img/2021_04_27_AGF_compte_rendu.pdf" target="blank">Compte rendu de l'assemblée générale fédérale</a><br>
             <a href="img/2021_03_25_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 25 mars 2021</a><br>
             <a href="img/2021_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2021</a><br>
-            <a href="img/2021_01_14_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 14 janvier 2021</a><br>
-            <a href="img/2020_12_10_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 10 décembre 2020</a><br>
             </div>
             <span>
             <a href="https://www.dropbox.com/s/a5syjcolp8qf7ez/Tribunal%20administratif%20de%20Poitiers%20-%2014%20d%C3%A9c%202017.m4v?dl=0" target="blank">14 décembre 2017, visite du tribunal administratif de Poitiers</a><br>
