--- a/Actualités.html
+++ b/Actualités.html
@@ -18,18 +18,19 @@
         </header-nav>
         <footer class="footer">
             <div>
+            <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br>
             <a href="img/2021_05_06_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 6 mai 2021</a><br>
             <a href="img/2021_04_27_AGF_compte_rendu.pdf" target="blank">Compte rendu de l'assemblée générale fédérale</a><br>
             <a href="img/2021_03_25_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 25 mars 2021</a><br>
             <a href="img/2021_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2021</a><br>
             </div>
             <span>
+            <a href="https://www.dropbox.com/s/5zl8if3cbm4pdjd/Maison%20de%20Sant%C3%A9%20-%20CHU%20Poitiers%20-%20f%C3%A9v%202019.m4v?dl=0" target="blank">8 février 2019, visite de la Maison de Santé CHU de Poitiers</a><br>
             <a href="https://www.dropbox.com/s/a5syjcolp8qf7ez/Tribunal%20administratif%20de%20Poitiers%20-%2014%20d%C3%A9c%202017.m4v?dl=0" target="blank">14 décembre 2017, visite du tribunal administratif de Poitiers</a><br>
             <a href="https://www.dropbox.com/s/l83sbhfhhyjycik/1%C3%A8re%20journ%C3%A9e%20de%20l%27environnement%20COBATY.m4v?dl=0" target="blank">1ère journée fédérale sur l’environnement à Poitiers, le 16 mai 2019</a><br>
             <a href="https://www.dropbox.com/s/ajsb7w4rn2tg81r/Chauvigny%2013%20juin%202019.m4v?dl=0" target="blank">Visite CHAUVIGNY</a><br>
             <a href="https://www.dropbox.com/s/jbkfjgvmeynjp20/Confort%20Moderne%20-%209%20mars%202017.m4v?dl=0" target="blank">Visite du chantier du Confort Moderne</a><br>
             <a href="https://www.dropbox.com/s/pu2f0ngo5s5q5bk/Ch%C3%A2teau%20de%20Dissay%20-%2011-oct-2018.m4v?dl=0" target="blank">Visite du Château de Dissay 11 octobre 2018</a><br>
-            <a href="https://www.dropbox.com/s/jo47i3ybj9j9ot8/Am%C3%A9nagement%20de%20Tison%2014%20juin%202018.m4v?dl=0" target="blank">Visite du chantier de l'Ilot TISON</a><br>
             </span>
         </footer>
     </body>
