--- a/Actualités.html
+++ b/Actualités.html
@@ -18,11 +18,11 @@
         </header-nav>
         <footer class="footer">
             <div>
-            <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br>
+            <a href="img/2021_07_07_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 7 juillet 2021</a><br>
+            <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br>           <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br>
             <a href="img/2021_05_06_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 6 mai 2021</a><br>
             <a href="img/2021_04_27_AGF_compte_rendu.pdf" target="blank">Compte rendu de l'assemblée générale fédérale</a><br>
             <a href="img/2021_03_25_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 25 mars 2021</a><br>
-            <a href="img/2021_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2021</a><br>
             </div>
             <span>
             <a href="https://www.dropbox.com/s/5zl8if3cbm4pdjd/Maison%20de%20Sant%C3%A9%20-%20CHU%20Poitiers%20-%20f%C3%A9v%202019.m4v?dl=0" target="blank">8 février 2019, visite de la Maison de Santé CHU de Poitiers</a><br>
