--- a/Actualités.html
+++ b/Actualités.html
@@ -19,7 +19,7 @@
         <footer class="footer">
             <div>
             <a href="img/2021_07_07_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 7 juillet 2021</a><br>
-            <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br>           <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br>
+            <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br>          
             <a href="img/2021_05_06_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 6 mai 2021</a><br>
             <a href="img/2021_04_27_AGF_compte_rendu.pdf" target="blank">Compte rendu de l'assemblée générale fédérale</a><br>
             <a href="img/2021_03_25_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 25 mars 2021</a><br>
