--- a/Actualités.html
+++ b/Actualités.html
@@ -19,10 +19,10 @@
         <footer class="footer">
             <div>
             <a href="img/2021_07_07_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 7 juillet 2021</a><br>
+            <a href="img/2021_06_30_PRESIDENTS_DISTRICT_7.pdf" target="blank">Réunion des Présidents District 7 du 30 juin 2021</a><br>
             <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br>          
             <a href="img/2021_05_06_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 6 mai 2021</a><br>
             <a href="img/2021_04_27_AGF_compte_rendu.pdf" target="blank">Compte rendu de l'assemblée générale fédérale</a><br>
-            <a href="img/2021_03_25_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 25 mars 2021</a><br>
             </div>
             <span>
             <a href="https://www.dropbox.com/s/5zl8if3cbm4pdjd/Maison%20de%20Sant%C3%A9%20-%20CHU%20Poitiers%20-%20f%C3%A9v%202019.m4v?dl=0" target="blank">8 février 2019, visite de la Maison de Santé CHU de Poitiers</a><br>
@@ -30,7 +30,6 @@
             <a href="https://www.dropbox.com/s/l83sbhfhhyjycik/1%C3%A8re%20journ%C3%A9e%20de%20l%27environnement%20COBATY.m4v?dl=0" target="blank">1ère journée fédérale sur l’environnement à Poitiers, le 16 mai 2019</a><br>
             <a href="https://www.dropbox.com/s/ajsb7w4rn2tg81r/Chauvigny%2013%20juin%202019.m4v?dl=0" target="blank">Visite CHAUVIGNY</a><br>
             <a href="https://www.dropbox.com/s/jbkfjgvmeynjp20/Confort%20Moderne%20-%209%20mars%202017.m4v?dl=0" target="blank">Visite du chantier du Confort Moderne</a><br>
-            <a href="https://www.dropbox.com/s/pu2f0ngo5s5q5bk/Ch%C3%A2teau%20de%20Dissay%20-%2011-oct-2018.m4v?dl=0" target="blank">Visite du Château de Dissay 11 octobre 2018</a><br>
             </span>
         </footer>
     </body>
