--- a/Actualités.html
+++ b/Actualités.html
@@ -18,18 +18,17 @@
         </header-nav>
         <footer class="footer">
             <div>
-            <a href="img/2021_07_07_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 7 juillet 2021</a><br>
+            <a href="img/2021_09_06_Message_SM.pdf" target="blank">Message Président du 6 septembre 2021</a><br>
+            <a href="img/2021_07_07_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 7 juillet 2021</a><br>            
             <a href="img/2021_06_30_PRESIDENTS_DISTRICT_7.pdf" target="blank">Réunion des Présidents District 7 du 30 juin 2021</a><br>
             <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br>          
             <a href="img/2021_05_06_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 6 mai 2021</a><br>
-            <a href="img/2021_04_27_AGF_compte_rendu.pdf" target="blank">Compte rendu de l'assemblée générale fédérale</a><br>
             </div>
             <span>
             <a href="https://www.dropbox.com/s/5zl8if3cbm4pdjd/Maison%20de%20Sant%C3%A9%20-%20CHU%20Poitiers%20-%20f%C3%A9v%202019.m4v?dl=0" target="blank">8 février 2019, visite de la Maison de Santé CHU de Poitiers</a><br>
             <a href="https://www.dropbox.com/s/a5syjcolp8qf7ez/Tribunal%20administratif%20de%20Poitiers%20-%2014%20d%C3%A9c%202017.m4v?dl=0" target="blank">14 décembre 2017, visite du tribunal administratif de Poitiers</a><br>
             <a href="https://www.dropbox.com/s/l83sbhfhhyjycik/1%C3%A8re%20journ%C3%A9e%20de%20l%27environnement%20COBATY.m4v?dl=0" target="blank">1ère journée fédérale sur l’environnement à Poitiers, le 16 mai 2019</a><br>
             <a href="https://www.dropbox.com/s/ajsb7w4rn2tg81r/Chauvigny%2013%20juin%202019.m4v?dl=0" target="blank">Visite CHAUVIGNY</a><br>
-            <a href="https://www.dropbox.com/s/jbkfjgvmeynjp20/Confort%20Moderne%20-%209%20mars%202017.m4v?dl=0" target="blank">Visite du chantier du Confort Moderne</a><br>
             </span>
         </footer>
     </body>
