--- a/Actualités.html
+++ b/Actualités.html
@@ -18,11 +18,13 @@
         </header-nav>
         <footer class="footer">
             <div>
+            <a href="img/2021_11_25_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 25 noovembre 2021</a><br>            
             <a href="img/2021_11_04_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 4 novembre 2021</a><br>    
             <a href="img/2021_09_06_Message_SM.pdf" target="blank">Message Président du 6 septembre 2021</a><br>
             <a href="img/2021_07_07_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 7 juillet 2021</a><br>            
             <a href="img/2021_06_30_PRESIDENTS_DISTRICT_7.pdf" target="blank">Réunion des Présidents District 7 du 30 juin 2021</a><br>
-            <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br>          
+            <a href="img/2021_06_03_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 3 juin 2021</a><br> 
+                    
             </div>
             <span>
             <a href="https://www.dropbox.com/s/5zl8if3cbm4pdjd/Maison%20de%20Sant%C3%A9%20-%20CHU%20Poitiers%20-%20f%C3%A9v%202019.m4v?dl=0" target="blank">8 février 2019, visite de la Maison de Santé CHU de Poitiers</a><br>
