--- a/Actualités.html
+++ b/Actualités.html
@@ -18,6 +18,7 @@
         </header-nav>
         <footer class="footer">
             <div>
+            <a href="img/2021_12_16_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 16 décembre 2021</a><br>
             <a href="img/2021_11_25_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 25 novembre 2021</a><br>   
             <a href="img/2021_11_04_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 4 novembre 2021</a><br>    
             <a href="img/2021_09_06_Message_SM.pdf" target="blank">Message Président du 6 septembre 2021</a><br>
