--- a/Actualités.html
+++ b/Actualités.html
@@ -18,16 +18,16 @@
         </header-nav>
         <footer class="footer">
             <div>
+            <a href="img/2022_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2022</a><br>
             <a href="img/2022_01_13_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 13 janvier 2022</a><br>
             <a href="img/2021_12_16_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 16 décembre 2021</a><br>
             <a href="img/2021_11_25_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 25 novembre 2021</a><br>   
             <a href="img/2021_11_04_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 4 novembre 2021</a><br>    
             <a href="img/2021_09_06_Message_SM.pdf" target="blank">Message Président du 6 septembre 2021</a><br>
-            <a href="img/2021_07_07_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 7 juillet 2021</a><br>            
+                       
             </div>
             <span>
             <a href="https://www.dropbox.com/s/5zl8if3cbm4pdjd/Maison%20de%20Sant%C3%A9%20-%20CHU%20Poitiers%20-%20f%C3%A9v%202019.m4v?dl=0" target="blank">8 février 2019, visite de la Maison de Santé CHU de Poitiers</a><br>
-            <a href="https://www.dropbox.com/s/a5syjcolp8qf7ez/Tribunal%20administratif%20de%20Poitiers%20-%2014%20d%C3%A9c%202017.m4v?dl=0" target="blank">14 décembre 2017, visite du tribunal administratif de Poitiers</a><br>
             <a href="https://www.dropbox.com/s/l83sbhfhhyjycik/1%C3%A8re%20journ%C3%A9e%20de%20l%27environnement%20COBATY.m4v?dl=0" target="blank">1ère journée fédérale sur l’environnement à Poitiers, le 16 mai 2019</a><br>
             </span>
         </footer>
