--- a/Actualités.html
+++ b/Actualités.html
@@ -18,6 +18,7 @@
         </header-nav>
         <footer class="footer">
             <div>
+            <a href="img/2022_03_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 mars 2022</a><br>
             <a href="img/2022_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2022</a><br>
             <a href="img/2022_01_13_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 13 janvier 2022</a><br>
             <a href="img/2021_12_16_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 16 décembre 2021</a><br>
