--- a/Actualités.html
+++ b/Actualités.html
@@ -19,15 +19,14 @@
         <footer class="footer">
             <div>
             <a href="img/2022_04_28_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 28 avril 2022</a><br>
+            <a href="img/2022_04_28_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 28 avril 2022</a><br>
             <a href="img/2022_03_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 mars 2022</a><br>
             <a href="img/2022_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2022</a><br>
             <a href="img/2022_01_13_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 13 janvier 2022</a><br>
             <a href="img/2021_12_16_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 16 décembre 2021</a><br>
-            <a href="img/2021_11_25_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 25 novembre 2021</a><br>   
-                                
+                                         
             </div>
             <span>
-            <a href="https://www.dropbox.com/s/5zl8if3cbm4pdjd/Maison%20de%20Sant%C3%A9%20-%20CHU%20Poitiers%20-%20f%C3%A9v%202019.m4v?dl=0" target="blank">8 février 2019, visite de la Maison de Santé CHU de Poitiers</a><br>
             <a href="https://www.dropbox.com/s/l83sbhfhhyjycik/1%C3%A8re%20journ%C3%A9e%20de%20l%27environnement%20COBATY.m4v?dl=0" target="blank">1ère journée fédérale sur l’environnement à Poitiers, le 16 mai 2019</a><br>
             </span>
         </footer>
