--- a/Actualités.html
+++ b/Actualités.html
@@ -18,7 +18,7 @@
         </header-nav>
         <footer class="footer">
             <div>
-            <a href="img/2022_04_28_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 28 avril 2022</a><br>
+            <a href="img/2022_05_23_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 23 mai 2022</a><br>
             <a href="img/2022_04_28_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 28 avril 2022</a><br>
             <a href="img/2022_03_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 mars 2022</a><br>
             <a href="img/2022_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2022</a><br>
