--- a/Actualités.html
+++ b/Actualités.html
@@ -18,13 +18,12 @@
         </header-nav>
         <footer class="footer">
             <div>
+            <a href="img/2022_09_26_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 26 septembre 2022</a><br>            
+            <a href="img/2022_09_01_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 1er septembre 2022</a><br>
             <a href="img/2022_06_15_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 15 juin 2022</a><br>
             <a href="img/2022_05_23_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 23 mai 2022</a><br>
             <a href="img/2022_04_28_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 28 avril 2022</a><br>
             <a href="img/2022_03_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 mars 2022</a><br>
-            <a href="img/2022_02_24_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 24 février 2022</a><br>
-            <a href="img/2022_01_13_COBATY_Bureau.pdf" target="blank">Bureau COBATY du 13 janvier 2022</a><br>
-                                                    
             </div>
             <span>
             <a href="https://www.dropbox.com/s/l83sbhfhhyjycik/1%C3%A8re%20journ%C3%A9e%20de%20l%27environnement%20COBATY.m4v?dl=0" target="blank">1ère journée fédérale sur l’environnement à Poitiers, le 16 mai 2019</a><br>
