--- a/index.html
+++ b/index.html
@@ -1,31 +1,37 @@
-<!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title>COBATY POITIERS-VIENNE></title>
-        <meta name="description" content="Association regroupant toutes celles et tous ceux dont l'activité professionnelle est concernée par l'acte de bâtir, l'urbanisme ou l'environnement">
-        <meta name="keywords" content="cobaty, bâtiment, urbanisme, environnement">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body class="body">
-        <header class="header">  
-            <img src="img/LOGO_COBATY_FEDERAL.png" alt="Logo COBATY fédéral">
-            <h1> COBATY POITIERS-VIENNE </h1>
-            <img src="img/LOGO_CPV.png" alt="Logo COBATY POITIERS VIENNE">
-        </header>
-        <header-nav class="header-nav">
-            <a href="https://www.cobaty.org" target="blank">Site COBATY FEDERAL</a>
-            <a href="Actualités.html">Actualités</a>
-        </header-nav>
-        <fieldset>
-            <p> Créée en 1984, l'Association <strong><br>COBATY POITIERS-VIENNE</strong><br> compte 40 membres</p>
-            <p><strong> Siège social :</strong><br>Chez LA PETITE FRANCE<br>42, route de Saumur<br>86440 Migné-Auxances</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2739.7495810284895!2d0.3004983153363778!3d46.631709179132066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fd97ccae12b021%3A0x845c6fd1bcc5552b!2s42%20Rue%20de%20Saumur%2C%2086440%20Mign%C3%A9-Auxances!5e0!3m2!1sfr!2sfr!4v1607956420175!5m2!1sfr!2sfr">
-            </iframe>
-        </fieldset>
-        <footer class="footer">
-            <p><strong>Adresse de correspondance :</strong></p>
-            <p><strong> COBATY POITIERS-VIENNE</strong><br> Stéphane MELIN<br> MELIN-EXPERTISE<br> 216 Avenue du 8 mai 1945<br> 86000 POITIERS</p>
-        </footer>
-    </body>
-</html>
+# Query: index
+# ContextLines: 1
+
+1 résultat - 1 fichier
+
+<! DOCTYPE html>
+	<html lang="fr">
+	    <header>
+	        <meta charset="utf-8">
+	        <titre>COBATY POITIERS-VIENNE></titre>
+	        <meta name="description" content="Association regroupant toutes celles et tous ceux dont l’activité professionnelle est concernée par l’acte de bâtir, l’urbanisme ou l’environnement">
+	        <meta name="mots-clés" content="cobaty, bâtiment, urbanisme, environnement">
+	        <link rel="stylesheet" href="style.css">
+	    </header>
+	    <body class="body ">
+	        <header class="header">  
+	            <img src="img/LOGO_COBATY_FEDERAL.png" alt="Logo COBATY fédéral">
+	            <H1> COBATY POITIERS-VIENNE </H1>
+	            <img src="img/LOGO_CPV.png" alt="Logo COBATY POITIERS VIENNE">
+	        </header>
+	        <header-nav class="header-nav">
+	            <a href="https://www.cobaty.org" target="blank">Site COBATY FEDERAL</a >
+	            <a  href="Actualités.html">Actualités</a>
+	        </header-nav>
+	        <div>
+	            <p> Créée en 1984, l’Association <strong><br>COBATY POITIERS-VIENNE</strong><br> compte 40 membres</p>
+	            <p><strong> Siège social :</strong><br>Chez LA PETITE FRANCE<br>42, route de Saumur<br>86440 Migné-Auxances</p>
+	            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2739.7495810284895!2d0.3004983153363778!3d46.631709179132066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fd97ccae12b021%3A0x845c6fd1bcc5552b!2s42%20Rue%20de%20Saumur%2C%2086440%20Mign%C3%A9-Auxances!5e0!3m2!1sfr!2sfr!4v1607956420175!5m2!1sfr!2sfr">
+	            </iframe>
+	        </div>
+	        <footer class="footer">
+	            <p><strong>Adresse de correspondance :</strong></p>
+	            <p><strong> COBATY POITIERS-VIENNE</strong><br> Stéphane MELIN<br> MELIN-EXPERTISE<br> Pôle République III<br> 2 rue Alfred Nobel<br> 86000 POITIERS</p>
+	        </footer>
+	    </body>
+	</html>
+
